Bug 149389 - Crash when closing document in dead key mode while adding comment
Summary: Crash when closing document in dead key mode while adding comment
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
7.3.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-05-31 01:05 UTC by Aron Budea
Modified: 2022-06-02 13:16 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace (18.78 KB, text/plain)
2022-05-31 11:55 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2022-05-31 01:05:32 UTC
This requires a keyboard layout with dead keys enabled.

- Start a new document,
- add a comment,
- type an accent, eg. AltGr + ',
- close the document at that point.

=> Crash.

I can't reproduce with a debug build, but can in a release build.

Regression from the following commit, bibisected using repo bibisect-linux-64-7.3. Adding CC: to Noel Grandin.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=5d0a231b29dfd4d587c7a4d1bbda6a511f94ec77
author		Noel Grandin <noelgrandin@gmail.com>	2021-07-10 10:19:28 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-07-15 14:41:13 +0200

WhichRangesContainer, reduce malloc in SfxItemSet
Comment 1 Aron Budea 2022-05-31 11:55:38 UTC
Created attachment 180497 [details]
Backtrace

For the record, even with a release build, it only crashes after a few tries. With the bibisect builds, it always crashed for me on the first try.
Comment 2 Commit Notification 2022-06-02 13:12:53 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0307018e94f64cd0bf4426f943109e1d7593ec27

tdf#149389 Crash when closing document in dead key mode while adding comment

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.