tdf#149389 Crash when closing document in dead key mode while adding comment

blind fix

Change-Id: I79405cf36ce664024626ca7f348885a3dc91a593
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/135304
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>